<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayoutNeighbourDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_neighbour_details_activity"
...
            </com.google.android.material.appbar.MaterialToolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/big_title_neighbour_details_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="32dp"
                    android:layout_marginStart="16dp"
...
